# flexmalloc

./: LICENSE  Makefile.am  Makefile.in  README.md  aclocal.m4  autogen.sh  configure  configure.ac  flexmalloc-config.h.in
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
config/: ax-config-script.m4  macros.m4
doc/: Makefile.in  README.txt
scripts/: Makefile.am  Makefile.in  count.sh  count.sh.in  flexmalloc.sh  flexmalloc.sh.in
src/: Makefile.am  Makefile.in  allocator-debug.cxx  allocator-debug.hxx  allocator-memkind-hbwmalloc.cxx  allocator-memkind-hbwmalloc.hxx  allocator-memkind-pmem.cxx  allocator-memkind-pmem.hxx  allocator-posix.cxx  allocator-posix.hxx  allocator-statistics.cxx  allocator-statistics.hxx  allocator.cxx  allocator.hxx  allocators.cxx  allocators.hxx  bfd-manager.cxx  bfd-manager.hxx  cache-callstack.cxx  cache-callstack.hxx  code-locations.cxx  code-locations.hxx  common.cxx  common.hxx  counter.cxx  flex-malloc.cxx  flex-malloc.hxx  malloc-interposer.cxx  statistics-recorder-allocator.hxx  utils.cxx  utils.hxx
tests/: Makefile.am  Makefile.in  base-memory-configuration  libtester.c  libtester.h  malloc+free-libtester-locations  malloc+free-libtester.c  malloc+free-locations  malloc+free.c  malloc+realloc-locations  malloc+realloc.c  multiple-tests-locations  multiple-tests.c  posix_memalign+realloc-locations  posix_memalign+realloc.c  realloc-locations  realloc.c  test-wrapper.sh.in
